# multi-agent-governance-recommender-data

./: .env.example  .gitignore  BUILD_PLAN.md  CHANGELOG.md  Makefile  README.md  main.py  pyproject.toml
docs/: REVIEW_dataset_vs_agent_alignment.md  data-generation-plan.md  execution-guide.md
export/20260526/: MANIFEST.md
export/latest/: INDEX.json  MANIFEST.md  README.md
prompts/: pass1.txt  pass2.txt  pass2_verification.txt  smoke_test.txt
public-export/: README.md
public-export/dataset/: DATASET_CARD.md  EVAL.md  README.md  eval.py  sample_predictions.json
public-export/design/: DECISIONS.md
public-export/eval-set/: BASELINES.md  EVAL.md  README.md  eval.py  tiers.py
public-export/synthesized-cloud-optimization-recommendations/: DATASET_CARD.md  EVAL.md  LICENSE  README.md  eval.py  scenarios_summary.jsonl
scenarios/01/: compute_telemetry.json  metadata.json
scenarios/03/: main.tf  metadata.json
scenarios/04/: database_telemetry.json
scenarios/05/: metadata.json
scenarios/06/: cache_telemetry.json  metadata.json
scenarios/07/: correlation_evidence.json
scenarios/08/: compute_telemetry.json  correlation_evidence.json  database_telemetry.json  main.tf  metadata.json
scripts/: _build_export_grep.sh  _build_export_helpers.py  backup_all_outputs.sh  backup_intermediates.sh  build_public_export.sh  export_passing_scenarios.sh  rerun_all_18_smoke_judge.sh  run_remediation_optionQ.sh  score_all_18.sh  show_previously_failed_now_pass.sh  test_dataset_clone.sh
src/: __init__.py
tests/: conftest.py  test_skeleton_imports.py
(+257 files in other folders)
