[project]
name = "cloud-governance-data-gen"
version = "0.1.0"
description = "Synthetic-data generation pipeline for the Cloud Governance multi-agent recommender — produces 18 contract-conformant scenario datasets for agent evaluation."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Pydantic models from the shared contract (synced from cloud-governance-agent)
    "pydantic>=2.0",
    # Terraform stub generation
    "jinja2>=3.1",
    "python-hcl2>=4.3",
    # YAML scenario specs
    "pyyaml>=6.0",
    # LLM client for Pass 1 / Pass 2 generation
    "anthropic>=0.39",
    # Environment configuration
    "python-dotenv>=1.0",
    # Observability — auto-traces Anthropic SDK calls when LANGSMITH_TRACING=true
    "langsmith>=0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
